Bug #24595
rgw: default quota not set in radosgw for Openstack users
0%
Description
I have a luminous ceph cluster where I have just deployed radosgw
I tried relying on the "rgw user default quota max size" attribute to set the default quota. It works for users created using "radosgw-admin user create" while I am not able to see it working for OpenStack users.
If I explicitly set the quota for an OpenStack user using:
radosgw-admin quota set --quota-scope=user --max-size=2G --uid="a22db12575694c9e9f8650dde73ef565\$a22db12575694c9e9f8650dde73ef565" --rgw-realm=cloudtest
radosgw-admin quota enable --quota-scope=user --uid="a22db12575694c9e9f8650dde73ef565\$a22db12575694c9e9f8650dde73ef565" --rgw-realm=cloudtest
this works (i.e. quota is enforced)
In
http://docs.ceph.com/docs/master/radosgw/config-ref/
the description for the attribute "rgw bucket default quota max objects" says that this attribute is relevant when the radosgw-admin commands are used.
Is it the same also for the attribute "rgw user default quota max size", and therefore the quota is not enforced simply because these OpenStack users are automagically created in radosgw without using the radosgw-admin command ?
rgw bucket default quota max objects
Related issues
History
#1 Updated by Valery Tschopp over 2 years ago
This issue can be related to the same problem: https://tracker.ceph.com/issues/24532
#2 Updated by Yehuda Sadeh over 2 years ago
- Subject changed from Default quota not set in radosgw for Openstack users to rgw: default quota not set in radosgw for Openstack users
- Assignee set to Marcus Watts
#3 Updated by Yehuda Sadeh over 2 years ago
- Status changed from New to Triaged
#4 Updated by Casey Bodley over 2 years ago
- Related to Bug #24532: rgw user max buckets not working added
#5 Updated by Casey Bodley over 2 years ago
- Status changed from Triaged to Fix Under Review
- Assignee changed from Marcus Watts to Casey Bodley
- Backport set to mimic luminous
#6 Updated by Yuri Weinstein over 2 years ago
#7 Updated by Nathan Cutler over 2 years ago
- Status changed from Fix Under Review to Pending Backport
#8 Updated by Nathan Cutler over 2 years ago
- Copied to Backport #36222: luminous: rgw: default quota not set in radosgw for Openstack users added
#9 Updated by Nathan Cutler over 2 years ago
- Copied to Backport #36223: mimic: rgw: default quota not set in radosgw for Openstack users added
#10 Updated by Nathan Cutler about 2 years ago
- Status changed from Pending Backport to Resolved