rgw: RemoteApplier::create_account() applies default quota config

rgw users created to shadow users from external auth were missing the
logic to apply their default quota settings

Fixes: http://tracker.ceph.com/issues/24595

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit abb81b4fb5898d7cf39c86dc40d3b488717978c9)